Re-add the AccessiblePrivateMethods trait (#63087)
* Re-add the AccessiblePrivateMethods trait since there are plugins actually using it
* chore: Update PHPStan baseline for re-added AccessiblePrivateMethods trait

---------

Co-authored-by: Brandon Kraft <public@brandonkraft.com>

--- a/plugins/woocommerce/phpstan-baseline.neon
+++ b/plugins/woocommerce/phpstan-baseline.neon
@@ -77575,6 +77575,12 @@ parameters:
 			path: src/Internal/StockNotifications/StockSyncController.php
 
 		-
+			message: '#^Trait Automattic\\WooCommerce\\Internal\\Traits\\AccessiblePrivateMethods is used zero times and is not analysed\.$#'
+			identifier: trait.unused
+			count: 1
+			path: src/Internal/Traits/AccessiblePrivateMethods.php
+
+		-
 			message: '#^Cannot call method format\(\) on DateTime\|false\.$#'
 			identifier: method.nonObject
 			count: 4
